--- a/ext/index/style.css
+++ b/ext/index/style.css
@@ -1,4 +1,3 @@
-
 #image-list .blockbody {
 	background: none;
 	border: none;
@@ -6,4 +5,12 @@
 	margin: 0px;
 	padding: 0px;
 	text-align: justify;
+}
+
+.shm-image-list:after {
+	width: 100%;
+	display: inline-block;
+	font-size: 0;
+	line-height: 0;
+	content: " ";
 }
